fix(styles): fixed progress indicator spacing between label and rest of the component. fixed vertical alignment of icon [ci visual]

--- a/src/styles/progress-indicator.scss
+++ b/src/styles/progress-indicator.scss
@@ -52,6 +52,8 @@ $fd-progress-indicator-states: (
   --containerBorderColor: var(--fdProgress_Indicator_Container_Border_Neutral, var(--sapField_BorderColor));
   --iconDisplay: none;
   --iconContent: '';
+  --labelMarginStart: var(--fdProgress_Indicator_Label_Margin_Start);
+  --labelMarginEnd: var(--fdProgress_Indicator_Label_Margin_End);
 
   @include fd-reset();
 
@@ -83,8 +85,9 @@ $fd-progress-indicator-states: (
       --containerBackground: #{map_get($set-state, "containerBackground")};
       --containerBorderColor: #{map_get($set-state, "containerBorderColor")};
       --iconContent: #{map_get($set-state, "icon")};
-      --iconDisplay: inline-flex;
+      --iconDisplay: inline;
       --iconColor: #{map_get($set-state, "iconColor")};
+      --labelMarginStart: 0;
     }
   }
 
@@ -160,7 +163,10 @@ $fd-progress-indicator-states: (
 
   &__remaining {
     @include fd-reset();
-    @include fd-flex();
+
+    @include fd-flex() {
+      align-items: center;
+    }
 
     @include fd-progress-indicator-popover-control() {
       flex-grow: 1;
@@ -172,12 +178,14 @@ $fd-progress-indicator-states: (
     right: -1.25rem;
     bottom: -0.625rem;
     display: var(--iconDisplay);
+    margin-left: var(--fdProgress_Indicator_Label_Margin_Start);
+    margin-right: var(--fdProgress_Icon_Space_Before_Label);
 
     @include fd-rtl() {
       left: -1.25rem;
       right: initial;
-      margin-left: var(--fdProgress_Icon_Offset_Right);
-      margin-right: 0.375rem;
+      margin-left: var(--fdProgress_Icon_Space_Before_Label);
+      margin-right: var(--fdProgress_Indicator_Label_Margin_Start);
     }
 
     &::before {
@@ -204,7 +212,8 @@ $fd-progress-indicator-states: (
 
     display: inline-block;
     max-width: 100%;
-    margin: var(--fdProgress_Indicator_Label_Margin);
+    margin-left: var(--labelMarginStart);
+    margin-right: var(--labelMarginEnd);
     position: var(--fdProgress_Indicator_Label_Position, static);
     top: -1.25rem;
     left: 0;
@@ -216,6 +225,8 @@ $fd-progress-indicator-states: (
     @include fd-rtl() {
       left: initial;
       right: 0;
+      margin-left: var(--labelMarginEnd);
+      margin-right: var(--labelMarginStart);
     }
   }
 
